Amr-K8S/service-mesh/ingress-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shopping-app-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # Use the Istio ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Replace with your domain or wildcard (*)
    
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app
  namespace: istio-system
spec:
  hosts:
  - "*" # Replace with your domain or IP
  gateways:
  - shopping-app-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: web.default.svc.cluster.local # Replace with your service name
        port:
          number: 8080
